force-app/main/default/objects/maps__AssignmentPlanRun__c/maps__AssignmentPlanRun__c.object-meta.xml
<CustomObject>
    <label>Maps Assignment Plan Run</label>
    <nameField>
        <label>Maps Assignment Plan Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Assignment Plans Run</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>