force-app/main/default/objects/maps__AssignmentPlanRun__c/fields/maps__BatchJobId__c.field-meta.xml
<CustomField>
    <fullName>maps__BatchJobId__c</fullName>
    <label>Batch Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>