force-app/main/default/objects/maps__AssignmentPlanRun__c/fields/maps__CacheEndTime__c.field-meta.xml
<CustomField>
    <fullName>maps__CacheEndTime__c</fullName>
    <label>Cache End Time</label>
    <type>DateTime</type>
</CustomField>