force-app/main/default/objects/maps__AssignmentPlanRun__c/fields/maps__CacheStartTime__c.field-meta.xml
<CustomField>
    <fullName>maps__CacheStartTime__c</fullName>
    <label>Cache Start Time</label>
    <type>DateTime</type>
</CustomField>