force-app/main/default/objects/maps__AssignmentPlanRun__c/fields/maps__Error__c.field-meta.xml
<CustomField>
    <fullName>maps__Error__c</fullName>
    <description>This is the main error mesage</description>
    <label>Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>