force-app/main/default/objects/maps__AssignmentPlanRun__c/fields/maps__ProcessingEndTime__c.field-meta.xml
<CustomField>
    <fullName>maps__ProcessingEndTime__c</fullName>
    <label>Processing End Time</label>
    <type>DateTime</type>
</CustomField>