force-app/main/default/objects/maps__AssignmentPlanRun__c/fields/maps__ProcessingStartTime__c.field-meta.xml
<CustomField>
    <fullName>maps__ProcessingStartTime__c</fullName>
    <label>Processing Start Time</label>
    <type>DateTime</type>
</CustomField>