force-app/main/default/objects/maps__AssignmentPlanRun__c/fields/maps__QueryLimit__c.field-meta.xml
<CustomField>
    <fullName>maps__QueryLimit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Query Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>