force-app/main/default/objects/maps__AssignmentPlanRun__c/fields/maps__QueryLimitHit__c.field-meta.xml
<CustomField>
    <fullName>maps__QueryLimitHit__c</fullName>
    <description>Query Limit Hit</description>
    <formula>maps__QueryLimit__c - maps__RecordsTotal__c == 0</formula>
    <inlineHelpText>Query Limit Reached</inlineHelpText>
    <label>Query Limit Hit</label>
    <type>Checkbox</type>
</CustomField>