force-app/main/default/objects/maps__AssignmentPlanRun__c/fields/maps__RecordsErrorCount__c.field-meta.xml
<CustomField>
    <fullName>maps__RecordsErrorCount__c</fullName>
    <label>Records Error Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>