force-app/main/default/objects/maps__AssignmentPlanRun__c/fields/maps__RecordsNotAssignedCount__c.field-meta.xml
<CustomField>
    <fullName>maps__RecordsNotAssignedCount__c</fullName>
    <description>Number of Records Not Assigned</description>
    <formula>maps__RecordsTotal__c - maps__RecordsAssignedCount__c - maps__RecordsErrorCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Records Not Assigned</inlineHelpText>
    <label>Records Not Assigned Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>