force-app/main/default/objects/maps__AssignmentPlanRun__c/fields/maps__Status__c.field-meta.xml
<CustomField>
    <fullName>maps__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Caching</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
                <default>true</default>
                <label>Queued</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>